src/test/ui/error-codes/E0494.stderr
error[E0494]: cannot refer to the interior of another static, use a constant instead
  --> $DIR/E0494.rs:16:27
   |
LL | static A : &'static u32 = &S.a; //~ ERROR E0494
   |                           ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0494`.
